feat(i18n): implemented translate button

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,11 @@
 <header>
   <h1>Arland Michelena</h1>
   <p>Software Engineer</p>
+  <app-button></app-button>
 </header>
 
 <section>
-  <h2>Habilidades</h2>
+  <h2>{{ "SKILLS" | translate }}</h2>
   <ul>
     <li>Spring Boot</li>
     <li>Angular</li>
